--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 </head>
 
 <body>
-
+    <h1 class="text-center">FizzBuzz</h1>
+    <div class="container"></div>
 
 
     <script src="js/script.js"></script>
