completed 1st bonus by using DOM's manipulation on a new js file

--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
     <div class="container"></div>
 
 
-    <script src="js/script.js"></script>
+    <!-- Verisione template literals (da decommentare) -->
+    <!-- <script src="js/script.js"></script> -->
+
+    <!-- Versione tramite manipolazione del DOM  -->
+    <script src="js/main.js"></script>
 </body>
 
 </html>
