completed 2nd bonus by using DOM's manipulation

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 </head>
 
 <body>
-    <h1 class="text-center">FizzBuzz</h1>
-    <div class="container"></div>
+    <h1 class="text-center mb-3">FizzBuzz</h1>
+    <div class="container-md"></div>
 
 
     <!-- Verisione template literals (da decommentare) -->
